添加了时钟，完成了桌面框架

--- a/CarPlay/resources.qrc
+++ b/CarPlay/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/misc">
         <file>MusicWidget/images/music.png</file>
+        <file>room.jpg</file>
     </qresource>
 </RCC>
